third_party/move/move-compiler-v2/tests/unit_test/test/script_with_test_on_main.exp

Diagnostics:
error: unable to generate test
  ┌─ tests/unit_test/test/script_with_test_on_main.move:3:7
  │
3 │     #[test]
  │       ^^^^ Testing attributes are not allowed in scripts.
